fix menu click fail on menu collapse

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -65,8 +65,9 @@ body {
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -74,16 +75,21 @@ body {
 }
 
 ::-webkit-scrollbar {
-   height: 6px;
-   width: 6px;
+  height: 6px;
+  width: 6px;
 }
 ::-webkit-scrollbar-track {
-   background-color: transparent;
+  background-color: transparent;
 }
 ::-webkit-scrollbar-thumb {
-   border-radius: 4px;
-   background-color: rgba(163, 166, 173, 0.3);
+  border-radius: 4px;
+  background-color: rgba(163, 166, 173, 0.3);
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(163, 166, 173, 0.5);
+}
+
+.devtoys-aside-menu-popper .el-menu-item {
+  height: 100%;
+  line-height: 30px;
 }
